--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
               roadAddress: data.roadAddress,
               jibunAddress: jibunAddress,
               zonecode: data.zonecode,
+              addressType: data.addressType,
             };
             window.postMessageToiOS(postData);
           },
