--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
               zonecode: data.zonecode,
               userSelectedType: data.userSelectedType,
               addressType: data.addressType,
+              city: data.city
             };
             window.postMessageToiOS(postData);
           },
