--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               zonecode: data.zonecode,
               userSelectedType: data.userSelectedType,
               addressType: data.addressType,
-              city: data.city
+              city: data.sido
             };
             window.postMessageToiOS(postData);
           },
