--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
               zonecode: data.zonecode,
               userSelectedType: data.userSelectedType,
               addressType: data.addressType,
-              sido: data.sido
+              sido: data.sido,
+              buildingName: data.buildingName
             };
             window.postMessageToiOS(postData);
           },
